--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -6,7 +6,7 @@
     margin-left:75px;
     margin-top:10px;
     margin-bottom:10px;
-    height:125px;
+    height:110px%;
     width:125px;
 }
 .picCell{
