--- a/assets/css/shared.css
+++ b/assets/css/shared.css
@@ -26,7 +26,7 @@ body{
 }
 .container{
     background-color:white;
-    margin-bottom:15%;
+    padding-bottom:15%;
 }
 .row, p, footer {
     font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -36,8 +36,8 @@ p{
     font-size:14;   
 }
 footer{
-    position:fixed;
-    bottom:0px;
+    /*position:fixed;
+    bottom:0px;*/
     height:15%;
     width:100%;
     background-color: #666666;
@@ -49,9 +49,9 @@ footer{
 
 @media screen and (max-width:768px)
 {
-    .container{
+/*    .container{
         margin-bottom:10%;
-    }
+}*/
     nav{
         clear:both;
         position:static;
